fix(ui): remove unnecessary gap style

--- a/packages/ui/src/elements/DocumentStaleData/index.scss
+++ b/packages/ui/src/elements/DocumentStaleData/index.scss
@@ -29,7 +29,6 @@
 
     &__controls {
       display: flex;
-      gap: var(--base);
     }
   }
 }
